fix(_modals.scss): equally distributed spacing between buttons

--- a/app/css/scss/organisms/_modals.scss
+++ b/app/css/scss/organisms/_modals.scss
@@ -438,6 +438,7 @@ button.mfp-arrow {
     }
     .toggle-btn {
       @extend .label;
+      margin-right: 0px;
       color: variables.$text-color;
       border-color: variables.$grey-light;
       &:hover {
